Styling and stuff

--- a/dotasql.cfg
+++ b/dotasql.cfg
@@ -1,5 +1,5 @@
 # Get your api key at http://steamcommunity.com/dev/apikey
-api-key=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+api-key=2C785A3D6352AEC0040A9F38E5F23394
 # Find your account id using dotabuff.com
 # http://dotabuff.com/player/(your-account-id)
-account-id=XXXXXXXX
+account-id=65156008
